force-app/main/default/objects/Lead/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <label>Current Location</label>
    <type>TextArea</type>
</CustomField>