force-app/main/default/objects/Lead/fields/Graduation_Passing_Year__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Passing_Year__c</fullName>
    <label>Graduation Passing Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>