force-app/main/default/objects/Lead/fields/Graduation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Percentage__c</fullName>
    <label>Graduation Percentage</label>
    <length>5</length>
    <type>Text</type>
</CustomField>