force-app/main/default/objects/Lead/fields/Hall_Ticket_No__c.field-meta.xml
<CustomField>
    <fullName>Hall_Ticket_No__c</fullName>
    <label>Graduation Hallticket Number</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>