force-app/main/default/objects/Lead/fields/Intermediate_Polytechnic_Branch__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Polytechnic_Branch__c</fullName>
    <label>Intermediate/Polytechnic Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EP_Intermediate_Branch</valueSetName>
    </valueSet>
</CustomField>