force-app/main/default/objects/Lead/fields/Intermediate_Polytechnic_College_Name__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Polytechnic_College_Name__c</fullName>
    <label>Intermediate/Polytechnic College Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>