force-app/main/default/objects/Lead/fields/Intermediate_Polytechnic_Passing_Year__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Polytechnic_Passing_Year__c</fullName>
    <label>Intermediate/Polytechnic Passing Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>