force-app/main/default/objects/Lead/fields/Other_PG_Branch__c.field-meta.xml
<CustomField>
    <fullName>Other_PG_Branch__c</fullName>
    <label>Other PG Branch</label>
    <length>20</length>
    <type>Text</type>
</CustomField>