force-app/main/default/objects/Lead/fields/Other_Spoken_Language__c.field-meta.xml
<CustomField>
    <fullName>Other_Spoken_Language__c</fullName>
    <label>Other Spoken Language</label>
    <type>TextArea</type>
</CustomField>