force-app/main/default/objects/Lead/fields/Post_Graduate_Branch__c.field-meta.xml
<CustomField>
    <fullName>Post_Graduate_Branch__c</fullName>
    <label>Post Graduate Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EP_PostGraduation_Branch</valueSetName>
    </valueSet>
</CustomField>