force-app/main/default/objects/Lead/fields/School_Marks_Grade__c.field-meta.xml
<CustomField>
    <fullName>School_Marks_Grade__c</fullName>
    <label>School Marks/Grade</label>
    <length>5</length>
    <type>Text</type>
</CustomField>