force-app/main/default/objects/Lead/fields/School_Passing_Year__c.field-meta.xml
<CustomField>
    <fullName>School_Passing_Year__c</fullName>
    <label>School Passing Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>