force-app/main/default/objects/Lead/validationRules/Minimum_Percentage.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Percentage</fullName>
    <active>true</active>
    <errorConditionFormula>(
 VALUE(Graduation_Percentage__c ) &lt; 65
)||
(
 VALUE(Post_Graduate_Percentage__c) &lt; 65
)</errorConditionFormula>
    <errorMessage>Your academic percentage doesn&apos;t qualify the minimum criteria.</errorMessage>
</ValidationRule>