force-app/main/default/objects/Lead/listViews/TodaysLeads.listView-meta.xml
<ListView>
    <fullName>TodaysLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>Gender__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>Graduation_Passing_Year__c</columns>
    <columns>Graduation_Percentage__c</columns>
    <columns>Post_Graduate_Passing_Year__c</columns>
    <columns>Post_Graduate_Percentage__c</columns>
    <columns>Username__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Leads</label>
</ListView>